@@ -25,5 +25,5 @@ profile.runcall(main.main, sys.argv)
 profile.close()
 stats = hotshot.stats.load('gaupol.profile')
 stats.sort_stats('time', 'calls')
-stats.print_stats(sys.argv[1])
+stats.print_stats('.*gaupol.*', .5)
 os.remove('gaupol.profile')
